src/test/ui/issues/issue-41776.stderr
error: argument must be a string literal
  --> $DIR/issue-41776.rs:2:14
   |
LL |     include!(line!()); //~ ERROR argument must be a string literal
   |              ^^^^^^^

error: aborting due to previous error

